force-app/main/default/objects/dbt__Employee__c/fields/dbt__Active__c.field-meta.xml
<CustomField>
    <fullName>dbt__Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>