force-app/main/default/objects/dbt__Employee__c/fields/dbt__Address__c.field-meta.xml
<CustomField>
    <fullName>dbt__Address__c</fullName>
    <label>Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>