force-app/main/default/objects/dbt__Employee__c/fields/dbt__Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>dbt__Date_of_Birth__c</fullName>
    <label>Date of Birth</label>
    <type>Date</type>
</CustomField>