force-app/main/default/objects/dbt__Employee__c/fields/dbt__Email__c.field-meta.xml
<CustomField>
    <fullName>dbt__Email__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>