force-app/main/default/objects/dbt__Employee__c/fields/dbt__First_Name__c.field-meta.xml
<CustomField>
    <fullName>dbt__First_Name__c</fullName>
    <label>First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>