force-app/main/default/objects/dbt__Employee__c/fields/dbt__Hire_Date__c.field-meta.xml
<CustomField>
    <fullName>dbt__Hire_Date__c</fullName>
    <label>Hire Date</label>
    <type>Date</type>
</CustomField>