force-app/main/default/objects/dbt__Employee__c/fields/dbt__Last_Working_Date__c.field-meta.xml
<CustomField>
    <fullName>dbt__Last_Working_Date__c</fullName>
    <label>Last Working Date</label>
    <type>Date</type>
</CustomField>