force-app/main/default/objects/dbt__Employee__c/fields/dbt__Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>dbt__Phone_Number__c</fullName>
    <label>Phone Number</label>
    <type>Phone</type>
</CustomField>