force-app/main/default/objects/dbt__Employee__c/fields/dbt__User__c.field-meta.xml
<CustomField>
    <fullName>dbt__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Employees1</relationshipName>
    <type>Lookup</type>
</CustomField>