force-app/main/default/objects/dbt__Employee__c/listViews/dbt__All.listView-meta.xml
<ListView>
    <fullName>dbt__All</fullName>
    <columns>NAME</columns>
    <columns>dbt__Active__c</columns>
    <columns>dbt__User__c</columns>
    <columns>dbt__Manager__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>